# YP_diplom

./: .gitignore  database_dump.sql  docker-compose.yml  example.env  x.txt
actions_rasa/: Dockerfile  pyproject.toml
actions_rasa/src/: utils.py
actions_rasa/src/actions/: actions.py
actions_rasa/src/api/: base.py  films.py
actions_rasa/src/core/: config.py  logger.py
admin-panel/: Dockerfile  docker-entrypoint.sh  requirements.txt
admin-panel/example/: settings.py
admin-panel/movies/: admin.py  models.py
admin-panel/users/: auth.py  models.py  signals.py
admin-panel/users/migrations/: 0001_initial.py  0002_user_is_staff.py
alisa/: Dockerfile  pyproject.toml
alisa/src/: dependencies.py  main.py
alisa/src/api/: __init__.py  routers.py
alisa/src/api/endpoints/: __init__.py  connector_alisa.py  connector_website.py
alisa/src/core/: config.py
alisa/src/schemas/: alisa.py
alisa/src/services/: rasa.py  speech_kit.py
dialog/: Dockerfile  pyproject.toml
dialog/src/: config.yml  domain.yml  endpoints.yml
dialog/src/data/: nlu.yml  rules.yml  stories.yml
es-schemas/: genres.json  init.sh  movies.json  persons.json
etl-processes/: Dockerfile  connector.py  etls.py  requirements.txt  scheduler.py  schemas.py  storage.py  tasks.py
etl-processes/configs/: base.py  celery.py  elastic.py  postgres.py  redis.py
fastapi-solution/: Dockerfile  requirements.txt
fastapi-solution/src/: dependencies.py  main.py  security.py
fastapi-solution/src/core/: config.py  enums.py
fastapi-solution/src/models/: enums.py  film.py  genre.py  person.py
(+9 files in other folders)
