[project]
name = "alisa"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.13",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "orjson==3.10.18",
    "aiohttp==3.12.13",
    "uvicorn==0.34.3",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
]
